@@ -1,5 +1,6 @@
 Changelog for Weeder
 
+    #32, always disable color when running stack
 0.1.12, released 2018-01-16
     Make available on Mac
 0.1.11, released 2017-12-29
